NEW188351
UIWebView crashes while attempting to play youtube video on phone
https://bugs.webkit.org/show_bug.cgi?id=188351
Summary UIWebView crashes while attempting to play youtube video on phone
Jeremy Jones
Reported 2018-08-06 12:59:22 PDT
UIWebView crashes while attempting to play youtube video on phone
Attachments
Patch (1.62 KB, patch)
2018-08-06 13:19 PDT, Jeremy Jones
ddkilzer: review+
jeremyj-wk: commit-queue-
Patch for Landing (1.71 KB, patch)
2018-08-20 11:13 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2018-08-06 13:19:46 PDT
Sam Weinig
Comment 2 2018-08-07 09:43:37 PDT
Comment on attachment 346646 [details] Patch Can this be tested? If not, please indicate why in the ChangeLog.
David Kilzer (:ddkilzer)
Comment 3 2018-08-08 13:14:19 PDT
Comment on attachment 346646 [details] Patch r=me assuming you answer Sam's question in Comment #2.
Jeremy Jones
Comment 4 2018-08-20 11:13:03 PDT
Created attachment 347513 [details] Patch for Landing
WebKit Commit Bot
Comment 5 2018-08-20 11:38:13 PDT
Comment on attachment 347513 [details] Patch for Landing Clearing flags on attachment: 347513 Committed r235087: <https://trac.webkit.org/changeset/235087>
Note You need to log in before you can comment on or make changes to this bug.