UIWebView crashes while attempting to play youtube video on phone https://bugs.webkit.org/show_bug.cgi?id=188351 rdar://problem/42489664

Patch by Jeremy Jones <jeremyj@apple.com> on 2018-08-20
Reviewed by David Kilzer.

Test will be incorporated with fix for 188749, which will test both fixes.

VideoFullscreenControllerContext must remove unretained reference to it from m_playbackModel during cleanup.

* platform/ios/WebVideoFullscreenControllerAVKit.mm:
(VideoFullscreenControllerContext::didCleanupFullscreen):

Canonical link: https://commits.webkit.org/203806@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235087 268f45cc-cd09-0410-ab3c-d52691b4dbfc